tests/postgres/ui-common/duplicate_top_param_mapping.stderr
error: sql_forge!: duplicated parameter mapping
 --> tests/postgres/tmp-ui/duplicate_top_param_mapping.rs:9:24
  |
9 |         ( :id = 1i64, :id = 2i64 ),
  |                        ^^
